created login/register APIs,authenticate and authorized using JWT Token,middleware config and finally added the extension methods to program.cs file

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -8,6 +8,7 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Data source=Dating.db"
-    }
+    },
+    "TokenKey": "Super key unguessable key and make everry one surprise to see this passkey"
 
 }
